--- a/first-container/views/layouts/main.handlebars
+++ b/first-container/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 <body>
 
   <div class="main">
-    <img src="/images/image.png"/>
+    <img src="/images/IMG_20190216_163510.jpg"/>
     <div class="content">
       {{{body}}}
     </div>
